# qt-web-bridge

./: .gitignore  .gitmessage  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml  release.yml
docs/: CLAUDE.md  HOOKS-SETUP.md  conf.py  index.rst  installation.rst  pypi-setup.md  quickstart.rst  readthedocs-setup.md  requirements.txt
docs/context/: architecture-overview.md  coding-standards.md  dependencies-tech-stack.md  development-workflow.md
docs/examples/: index.rst
docs/guides/: basic-usage.rst  index.rst
examples/: bridge_communication_example.py  simple_webview_example.py
scripts/: setup-commit-template.py  setup-hooks-simple.py  setup-hooks.py  test-hooks.py
src/qt_web_bridge/: __init__.py  panel.py  utils.py
src/qt_webview_bridge/: __init__.py  bridge.py  panel.py  utils.py  webview.py
src/qt_webview_bridge/temp/: __init__.py
tests/: test_bridge.py  test_utils.py  test_webview.py
